Fixes docs subsite heading spacing

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -120,6 +120,9 @@ figure
 
 .article
 
+  .hero-body
+    padding: 0 !important
+
   .content
 
     h1:not(:first-child)
